--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,700&display=swap" rel="stylesheet"> 
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
